<?xml version="1.0"?>
<package format="2">
  <name>robotball</name>
  <version>0.1.0</version>
  <description>The metapackage for spherical robot by LARICS and TU Delft.</description>

  <maintainer email="marko.krizmancic@fer.hr">Marko Krizmancic</maintainer>

  <author email="marko.krizmancic@fer.hr">Marko Krizmancic</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robotball_driver</exec_depend>
  <exec_depend>robotball_control</exec_depend>
  <exec_depend>robotball_localization</exec_depend>
  <exec_depend>robotball_msgs</exec_depend>
  <exec_depend>robotball_simulation</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>

</package>
